2005-06-14  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* smtpd.tcl: The -deliver options should accept a script prefix
	not just a command. Set version to 1.4.0

2004-10-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.7 ========================
	* 

2004-06-26  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* smtpd.tcl: Implemented RFC3207 - Secure SMTP over TLS. This adds
	a number of configuration options and a new command (available if
	the tls package is provided and -usetls is set to true.) Also
	implemented the SMTP HELP command and switched to using the logger
	package from tcllib.
	* /examples/smtpd/tk_smtpdTLS: New demo server to show off the 
	TLS features added here.

2004-06-18  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* pkgIndex.tcl:  Incremented version to 1.2.2
	* smtpd.man:
	* smtpd.tcl:

	* smtpd.tcl (::smtpd::gmtoffset): Fixed bug #934134. The TZ
	calculation was inverted and failed to cope with times spanning
	midnight.
	* smtpd.tcl (::smtpd::HELO): Shortened the response to a single
	line which is a more common smtpd response and may help with
	simple clients.

2004-05-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.6.1 ========================
	* 

2004-02-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.6 ========================
	* 

2003-05-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.4 ========================
	* 

2003-04-10  Andreas Kupries  <andreask@activestate.com>

	* smtpd.tcl: Fixed bug #614591.

2003-01-25  Pat Thoyts <patthoyts@users.sourceforge.net>

	* smtpd.tcl: Fix bug #674333: require Tcl version 8.3+
	 (the mime package requires 8.3 therefore so do we.)
	
2003-01-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* smtpd.man: More semantic markup, less visual one.
